--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -28,6 +28,7 @@ $okf-sidebar-color: #242e30; // green darker
 
 $dark-text-color: #112233;
 $light-text-color: #535b63;
+$link-color: #044a5f; // links in blog posts
 $lightest-text-color: #aab5b7;
 $main-text: #4e6361; // main text
 $link: #6cac70; // anchor tags
@@ -1291,7 +1292,7 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
 
   .post-image-license {
@@ -1314,6 +1315,25 @@ header {
 
   .post-content {
     overflow-x: auto;
+
+    h1 {
+      margin-top: 60px;
+    }
+    h2 {
+      margin-top: 50px;
+    }
+    h3 {
+      margin-top: 40px;
+    }
+
+    a {
+      color: $link-color;
+    }
+
+    a:hover {
+      color: darken($link-color, 10%);
+    }
+
     img {
       max-width: 100%;
       height: auto;
@@ -1330,8 +1350,15 @@ header {
   }
 
   .share-post {
+    margin-top: 20px;
     text-align: right;
     font-size: 0.8em;
+  }
+
+  .twitter-tweet {
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 30px;
   }
 }
 
