job-seite wird automatisch aus gekennzeichneten blog-posts generiert

--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1553,3 +1553,16 @@ header {
     }
   }
 }
+
+//jobs page
+
+.jobs {
+
+  .job-entry {
+    margin-bottom: 60px;
+    h4 {
+      color: $dark-text-color;
+    }
+  }
+
+}
