--- a/static/style/_scss/fontello.scss
+++ b/static/style/_scss/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello/fontello.eot?66873782');
-  src: url('../fonts/fontello/fontello.eot?66873782#iefix') format('embedded-opentype'),
-       url('../fonts/fontello/fontello.woff2?66873782') format('woff2'),
-       url('../fonts/fontello/fontello.woff?66873782') format('woff'),
-       url('../fonts/fontello/fontello.ttf?66873782') format('truetype'),
-       url('../fonts/fontello/fontello.svg?66873782#fontello') format('svg');
+  src: url('../fonts/fontello/fontello.eot?42497175');
+  src: url('../fonts/fontello/fontello.eot?42497175#iefix') format('embedded-opentype'),
+       url('../fonts/fontello/fontello.woff2?42497175') format('woff2'),
+       url('../fonts/fontello/fontello.woff?42497175') format('woff'),
+       url('../fonts/fontello/fontello.ttf?42497175') format('truetype'),
+       url('../fonts/fontello/fontello.svg?42497175#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,42 +15,43 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?66873782#fontello') format('svg');
+    src: url('../font/fontello.svg?42497175#fontello') format('svg');
   }
 }
 */
- 
- [class^="icon-"]:before, [class*=" icon-"]:before {
+
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
- 
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
- 
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
@@ -58,6 +59,7 @@
 .icon-search:before { content: '\e800'; } /* '' */
 .icon-download:before { content: '\e801'; } /* '' */
 .icon-info-circled:before { content: '\e802'; } /* '' */
+.icon-calendar:before { content: '\e803'; } /* '' */
 .icon-github:before { content: '\e804'; } /* '' */
 .icon-facebook:before { content: '\e805'; } /* '' */
 .icon-flickr:before { content: '\e806'; } /* '' */
@@ -67,7 +69,11 @@
 .icon-left-open:before { content: '\e80a'; } /* '' */
 .icon-right-open:before { content: '\e80b'; } /* '' */
 .icon-up-open:before { content: '\e80c'; } /* '' */
+.icon-clock:before { content: '\e80d'; } /* '' */
+.icon-location:before { content: '\e80e'; } /* '' */
+.icon-users:before { content: '\e80f'; } /* '' */
 .icon-spin2:before { content: '\e831'; } /* '' */
+.icon-info-circled-alt:before { content: '\f086'; } /* '' */
 .icon-up-circled:before { content: '\f0aa'; } /* '' */
 .icon-resize-full-alt:before { content: '\f0b2'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
@@ -77,4 +83,3 @@
 .icon-tumblr:before { content: '\f173'; } /* '' */
 .icon-vimeo-squared:before { content: '\f194'; } /* '' */
 .icon-twitter:before { content: '\f309'; } /* '' */
-
