--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% strip %}<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -53,7 +53,7 @@
 
 <main id="main-content">
   {% if page.home %}
-    {{ content }}
+  {{ content }}
   {% else %}
   <nav class="navbar navbar-okfn" role="navigation">
     <div class="container">
@@ -63,7 +63,7 @@
     </div>
   </nav>
   <div id="main-container" class="container">
-      {{ content }}
+    {{ content }}
   </div>
   {% endif %}
   {% include footer.html %}
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+{% endstrip %}
