--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -16,14 +16,17 @@ $headlines-font-family: 'LeagueSpartan-Bold', 'Helvetica', sans-serif;
 
 // colors
 
-$okf-background: #f5f4e9;
+$okf-background: rgb(244, 248, 249);
 
 $okf-primary: rgb(38, 183, 217);
 $okf-secondary: rgb(4, 92, 113);
 $okf-tertiary: rgb(29, 165, 197);
 $okf-quartinary: rgb(3, 134, 165);
+$okf-highlight: #ff2600;
 
-$okf-header-color: #045c71; // blue dark
+$okf-header-bg-color: #fff; // white
+$okf-header-color: $okf-secondary;
+$okf-header-brand-color: $okf-secondary;
 $okf-sidebar-color: #242e30; // green darker
 
 $dark-text-color: #112233;
@@ -228,9 +231,12 @@ hr {
 
       > a.nav-link, > a.nav-link:hover, > a.nav-link:focus {
         text-align: right;
-        color: #fff;
-        border-bottom-color: #fff;
+        color: $okf-header-color;
+        border-bottom-color: $okf-header-color;
         background-color: transparent;
+        &.nav-link-highlight {
+          color: $okf-highlight;
+        }
       }
       > a.nav-link {
         display: inline-block;
@@ -276,7 +282,7 @@ header {
   left: 0;
   height: $header-S;
   width: 100%;
-  background: $okf-header-color;
+  background: $okf-header-bg-color;
   z-index: $header-zindex;
 
   &.fixed {
@@ -312,27 +318,26 @@ header {
     .header-logo-img {
       display: inline-block;
       vertical-align: middle;
-      width: $header-logo-S;
-      height: $header-logo-S;
 
       img {
         display: inline;
-        height: 100%;
-        width: 100%;
+        // width: $header-logo-S;
+        height: $header-logo-S;
+
+        @include MQ-M() {
+          // width: $header-logo-M;
+          height: $header-logo-M;
+        }
       }
 
-      @include MQ-M() {
-        height: $header-logo-M;
-        width: $header-logo-M;
-      }
 
     }
 
     span {
-      color: #fff;
+      color: $okf-header-brand-color;
       display: inline-block;
       vertical-align: middle;
-      border-bottom-color: #fff;
+      border-bottom-color: $okf-header-brand-color;
     }
 
     .header-brand-full {
@@ -396,7 +401,7 @@ header {
       height: 100%;
 
       text-transform: uppercase;
-      color: #FFF;
+      color: $okf-header-bg-color;
       font-weight: 600;
 
       display: none;
@@ -462,11 +467,10 @@ header {
   font-size: 14px;
   line-height: 16px;
   margin-left: 8px;
-  color: #939393;
-  position: relative;
-  top: 7px;
+  font-weight: bold;
+  color: $okf-header-color;
   a {
-    color: #fff;
+    color: #939393;
     margin: 0;
     padding: 0;
   }
