--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 			<li{% if page.menu_projekte %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/projekte/">{% t navig.Projekte %}</a></li>
 			<li{% if page.menu_blog %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/blog/">{% t navig.Blog %}</a></li>
 			<li{% if page.menu_services %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/services/">{% t navig.Services %}</a></li>
-			<li{% if page.menu_spenden %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/spenden/">{% t navig.Spenden %}</a></li>
+			<li{% if page.menu_spenden %} class="active"{% endif %}><a class="nav-link nav-link-highlight" href="{{ site.baseurl }}/spenden/">{% t navig.Spenden %}</a></li>
 			<li>
 				<div class="language-toggle">
 				{% if site.lang == "de" %}
