--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1405,7 +1405,7 @@ header {
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  text-align: center;
+  text-align: left;
   width: 100%;
 
   .post-preview {
