new post-meta styling

--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -1268,7 +1268,8 @@ header {
   .post-meta {
     font-size: 0.8em;
     color: $light-text-color;
-    line-height: 1.3em;
+    line-height: 0.75em;
+    margin-top: 10px;
 
     > a {
       color: $light-text-color;
