--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -700,7 +700,7 @@ header {
 .highlight-link {
   display: inline-block;
   padding: 0.5em 0.5em;
-  color: $white;
+  color: #fff;
   background-color: $okf-primary;
   -webkit-transition: background-color 0.5s ease-out;
   -moz-transition: background-color 0.5s ease-out;
@@ -709,7 +709,7 @@ header {
 
   &:hover {
     text-decoration: none;
-    color: $white;
+    color: #fff;
     background-color: darken($okf-primary, 20%);
   }
 }
