fix for unwanted sidebar animation on page load

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<nav id="sidebar">
+<nav id="sidebar" class="loading">
 	<div class="language-toggle pull-right">
 		{% if site.lang == "de" %}
 		{% capture link1 %}{{ site.baseurl_root }}/en{{ page.url |replace_first:"index.html"}}{% endcapture %}
