add services to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,8 @@
 						<li{% if page.menu_team %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/team/">{% t navig.Team %}</a></li>
 						<li{% if page.menu_vorstand %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/vorstand/">{% t navig.Vorstand %}</a></li>
 						<li{% if page.menu_verein %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/verein/">{% t navig.Verein %}</a></li>
+						<li{% if page.menu_services %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/services/">{% t navig.Services %}</a></li>
+
 						<li{% if page.menu_presse %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/presse/">{% t navig.Presse %}</a></li>
 						<li{% if page.menu_jobs %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/jobs/">{% t navig.Jobs %}</a></li>
 						<li{% if page.menu_impressum %} class="active"{% endif %}><a class="nav-link" href="{{ site.baseurl }}/impressum/">{% t navig.Impressum %}</a></li>
