--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -96,6 +96,20 @@ html, body {
   height: 100%;
 }
 
+.fond__blue {
+  background-color: $okf-primary;
+  color: white;
+
+  h1, h2 {
+    color: white;
+    }
+
+ a, a:hover {
+    color: white;
+  }
+
+  }
+
 h1, h2, h3, h4 {
   color: $dark-text-color;
   //text-transform: uppercase;
