--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,6 +30,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
+					<p>{% t footer.piwik_hint %}</p>
 					<p>{% t footer.license %}</p>
 				</div>
 				<div class="col-md-3 col-md-offset-1">
