--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
 {% include header.html %}
 {% if page.home %}
-<div data-component="dismissible-item" style="color: #222; font-size: 16px; line-height: 22px; position: fixed; bottom:20px; left:10px; width: 100%; margin:10px; z-index:10000; overflow: hidden; padding:0 50px; max-width:620px"></div>
+<div data-component="dismissible-item" style="color: #222; font-size: 26px; line-height: 45px; position: fixed; top:50%; left:50%; width: 100%; margin:10px; z-index:10000; overflow: hidden; padding:0 50px; max-width:620px; transform: translate(-50%,-50%)"></div>
 <script type="text/javascript" src="https://offenerhaushalt.de/static/js/banner.js"></script>
 {% endif %}
 <main id="main-content">
