--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -83,6 +83,7 @@ html * {
 }
 
 body {
+  position: relative;
   color: $light-text-color;
   font-family: $primary-font-family;
   font-weight: 300;
@@ -1696,5 +1697,39 @@ header {
         display: block;
       }
     }
+  }
+}
+
+#overlay{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 80;
+  background-color: #00564A;
+  width: 400px;
+  height: 300px;
+  top: 350;
+  img{
+    width: 100%;
+  }
+  h2{
+    color: #15FFD8;
+  }
+  p{
+    color: white;
+  }
+  marquee {
+    padding: 0.5em 2.3em;
+  }
+  button {
+    border: none;
+    background: transparent;
+    font-family: sans-serif;
+    color: white;
+    font-weight: 600;
+    position: absolute;
+    top: 8px;
+    z-index: 5;
+    right: 4px;
   }
 }
