--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,23 @@
 <script src="{{ site.staticurl }}js/index.js"></script>
 {% include piwik.html %}
 
+{% if page.home %}
+<div id="overlay">
+  <marquee height="35"><p>++ News ++ News ++ News ++ News ++ News ++ News ++ News ++ News ++ News ++</p></marquee>
+  <button title="Schließen">X</button>
+  <a href="https://bits-und-baeume.org/de">
+    <img src="./static/images/bits_.png" width="500" alt="Bits und Bäume Konferenz"/></a>
+                                </a>
+</div>
+<script>
+ document.addEventListener('DOMContentLoaded', function () {
+   $('#overlay button').click(function(ev) {
+     $('#overlay').remove();
+   })
+ });
+</script>
+{% endif %}
+
 </body>
 </html>
 {% endstrip %}
